<resources>
    <string name="no_service_available">Select a source</string>
    <string name="select_source">Select Atsc3 source</string>
    <string name="ba_loading_problem">Failed to load the media application</string>
    <string name="shortcut_preview_mode">Preview - %s</string>
    <string name="warning_external_stortage_permission">External storage permission is required</string>
    <string name="warning_access_background_location_permission">Location permission is necessary for correct work of the receiver</string>
    <string name="settings_title">Settings</string>
    <string name="settings_frequency_hint">Receiver frequency in MHz</string>
    <string name="settings_apply_btn">Tune</string>
    <string name="settings_scan_btn">Scan range</string>
    <string name="settings_enable_debug_info">Debug Information</string>
    <string name="settings_enable_phy_info">Phy Information</string>
    <string name="settings_display_phy_chart">Phy Chart</string>
    <string name="settings_show_media_information">Media Information</string>
    <string name="settings_enable_demod_pcap_capture">Enable Demod pcap capture</string>
    <string name="settings_enable_sensor_telemetry">Sensors</string>
    <string name="settings_enable_location_telemetry">Location</string>
    <string name="settings_enable_telemetry">Collect Telemetry</string>
    <string name="settings_explorer">Explorer</string>
    <string name="settings_delete">Delete</string>
    <string name="settings_save">Save</string>
    <string name="settings_tab_tune">Tune</string>
    <string name="settings_tab_ui">UI</string>
    <string name="settings_tab_telemetry">Telemetry</string>
    <string name="settings_tab_logs">Logs</string>
    <string name="settings_tab_config">Config</string>
    <string name="dialog_reload_title">Reload required</string>
    <string name="dialog_reload_message">Restart is required to apply new configuration.</string>
    <string name="dialog_reload_positive">Reload</string>
    <string name="dialog_reload_negative">Cancel</string>
    <string name="track_selection_title">Select media tracks</string>
    <string name="receiver_status_idle">Source not selected</string>
    <string name="receiver_status_scanning">Scanning %d/%d…</string>
    <string name="receiver_status_tuning">Connecting</string>
    <string name="receiver_scanning_cancel_btn">cancel</string>
    <string name="message_service_apk_not_found">Application with package name %s is unavailable</string>
    <string name="chart_phy_snr_title">Phy SNR</string>
    <string name="chart_phy_share_title">Phy Chart screenshot</string>
    <string name="permission_request_info_title">Permission required</string>
    <string name="permission_request_info_dnd">Permission to change Do Not Disturb mode is important for Emergency Alerting</string>
    <string name="debug_cellular_info">Cellular: %s, bandwidth: up - %s Kbps / down - %s Kbps</string>
    <string name="type_hdr">HDR</string>
</resources>
