<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dialog_content_padding">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/frequency_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/settings_frequency_hint"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/frequency_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusedByDefault="true"
                    android:inputType="number"
                    android:maxLength="3" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/scan_range_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/settings_scan_btn"
                app:layout_constraintEnd_toStartOf="@+id/tune_btn"
                app:layout_constraintTop_toBottomOf="@+id/frequency_field" />

            <Button
                android:id="@+id/tune_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_apply_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frequency_field" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>